Fix sonar-detected issues